[project]
name = "bach-ip_geolocation_find_ip_location_and_ip_info"
version = "1.0.0"
description = "RapidAPI: Chetan11dev/ip-geolocation-find-ip-location-and-ip-info"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
bach_ip_geolocation_find_ip_location_and_ip_info = "server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/bachstudio/bach-ip_geolocation_find_ip_location_and_ip_info"
Repository = "https://github.com/bachstudio/bach-ip_geolocation_find_ip_location_and_ip_info"
Documentation = "https://github.com/bachstudio/bach-ip_geolocation_find_ip_location_and_ip_info#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.version]
path = "server.py"
pattern = '__version__ = "(?P<version>[^"]+)"'