[project]
name = "bach-ip_geolocation_find_ip_location_and_ip_info"
version = "1.0.0"
description = "RapidAPI: Chetan11dev/ip-geolocation-find-ip-location-and-ip-info"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "bachstudio"}
]
keywords = ["mcp", "api", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
bach_ip_geolocation_find_ip_location_and_ip_info = "server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/bachstudio/bach-ip_geolocation_find_ip_location_and_ip_info"
Repository = "https://github.com/bachstudio/bach-ip_geolocation_find_ip_location_and_ip_info"
"Bug Tracker" = "https://github.com/bachstudio/bach-ip_geolocation_find_ip_location_and_ip_info/issues"
Documentation = "https://github.com/bachstudio/bach-ip_geolocation_find_ip_location_and_ip_info#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
artifacts = ["openapi.json"]

[tool.hatch.build.targets.sdist]
include = [
    "server.py",
    "openapi.json",
    "README.md",
    "LICENSE",
    "__init__.py",
]

[tool.hatch.version]
path = "server.py"
pattern = '__version__ = "(?P<version>[^"]+)"'